# diploma_work

./: README.md  house — копия.html  login1 — копия.html  login — копия.html  main.py  pyproject.toml  test.txt
backend/: Smart Home AI Backend.py  advanced-nlp-module.py
backend/nlp_models/: intent_classifier.pkl  user_preferences.json
backend/nlp_models/transformer_model/: config.json
frontend/: HomeIndex.html  main.js  smart-home-integration-complete.js  styles.css
models/: command_classifier.pkl  command_history.json  user_profiles.json  vectorizer.pkl
templates/: index — копия.html
