[project]
name = "Diplom"
version = "0.1.0"
description = "Smart home voice control system with AI and 3D interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pyttsx3>=2.98",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.5",
    "speechrecognition>=3.14.2",
    "tensorflow>=2.14.0",
    "transformers>=4.51.1",
]
